login system complete

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 DB_USER=sweet-pc-builder
 DB_PASS=5KIynBkrlX5pYjRP
+
+GITHUB_ID=ab0d51403a65b609541b
+GITHUB_SECRET=fff3a5beda278751b1c377a3229f2642281e382c
+
+
+NEXTAUTH_SECRET=zxcvbnm
+NEXTAUTH_URL=http://localhost:3000
