--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ GITHUB_ID=ab0d51403a65b609541b
 GITHUB_SECRET=fff3a5beda278751b1c377a3229f2642281e382c
 
 
-NEXTAUTH_SECRET=zxcvbnm
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=zxcvasdfads
+NEXT_SECRET=zxcvbnm
+NEXTAUTH_URL=https://sweet-pc-builder.vercel.app/
